# ai-survey-analyst

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/: tags_8.yaml
data/example_data/: coursera_survey_200rows.csv  example_survey_data_synthetic.csv
notebooks/: end_to_end_example.ipynb  extraction_example.ipynb  multilabel_classification_example.ipynb  sentiment_analysis_example.ipynb  summarization_example.ipynb  theme_derivation_example.ipynb
src/survey_analysis/: batch_runner.py  excerpt_extraction.py  models_common.py  multilabel_classification.py  sentiment_analysis.py  single_comment_task.py  single_input_task.py  summarization.py  theme_derivation.py  utils.py
